# tic_tac_toe

./: .gitignore  Makefile  README.md  pyproject.toml
backend/src/: __init__.py  game.py  main.py
backend/tests/: __init__.py  test_game.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts  socket.ts
frontend/src/components/: Button.vue  EndOfGame.vue  GameBoard.vue  Header.vue  NewGameButton.vue  PlayerIcon.vue
frontend/src/utils/: cookies.ts  store.ts
